peer-code-review feedback: fix contact section width on small screens

--- a/assets/css/small-screens.css
+++ b/assets/css/small-screens.css
@@ -126,7 +126,7 @@
     }
 
     #contact-form {
-        width: 60%;
+        max-width: 60%;
     }
 
     #success-message {
